--- a/Web/src/app/components/header/header.component.css
+++ b/Web/src/app/components/header/header.component.css
@@ -13,8 +13,8 @@
 .landing-logo {
     height: 34px;
     cursor: pointer;
-    margin-right: 20px;
-    margin-left: 20px;
+    margin-right: 15px;
+    margin-left: 15px;
     -khtml-user-select: none;
     -o-user-select: none;
     -moz-user-select: none;
@@ -71,6 +71,7 @@ a span {
     cursor: pointer;
     text-decoration: underline;
     padding-left: 15px;
+    padding-right: 15px;
 }
 
 .login {
@@ -98,15 +99,25 @@ a span {
     cursor: pointer;
 }
 
-::ng-deep .profile-menu {
+::ng-deep .sub-menu {
     background-color:  #101010;
     box-shadow: 0 0 4px #959595;
 }
 
-::ng-deep .profile-menu-item {
+::ng-deep .sub-menu-item {
     font-family: 'Gilroy';
+    font-weight: 600;
     color: white;
     font-size: 12px;
     opacity: 0.9; 
     border-top: solid 0.5px #959595 !important;
+}
+
+.mobile-menu {
+    color: white;
+    margin-right: 10px;
+}
+
+.about-mobile {
+    padding-left: 0px;
 }
