--- a/Web/src/app/app.component.html
+++ b/Web/src/app/app.component.html
@@ -1,7 +1,7 @@
-<header></header>
+<header class="global-container-min"></header>
 <ng-http-loader 
     [entryComponent]="topLoading">
 </ng-http-loader>
 <simple-notifications [options]="notificationOptions"></simple-notifications>
 <router-outlet></router-outlet>
-<footer></footer>
+<footer class="global-container-min"></footer>
