--- a/Web/src/app/components/util/footer/footer.component.html
+++ b/Web/src/app/components/util/footer/footer.component.html
@@ -1,6 +1,6 @@
 <div class="global-container">
   <div class="separator"></div>
-  <div fxLayout="row" fxLayoutAlign="space-between start">
+  <div fxLayout.gt-xs="row" fxLayoutAlign.gt-xs="space-between start" fxLayout.lt-sm="column" fxLayoutAlign.lt-sm="space-between center" fxLayoutGap.lt-sm="20px">
     <img src="./assets/logo_black.png" routerLink="" class="landing-logo">
     <div fxLayout="row" fxLayoutGap="100px">
       <div fxLayout="column" fxHide.lt-md>
@@ -14,7 +14,7 @@
         <div class="footer-item"><a href="mailto:contact@auctus.org">contact@auctus.org</a></div>
       </div>
       <div fxLayout="column">
-        <div class="footer-item-title text-right">FOLLOW US</div>
+        <div class="footer-item-title text-right" fxHide.lt-sm>FOLLOW US</div>
         <div class="footer-item" fxLayout="row" fxLayoutGap="8px">
           <div class="icon-wrapper">
             <a><fa-icon [icon]="['fab','facebook-f']" size="lg" fxLayoutAlign="center stretch"></fa-icon></a>
