--- a/Web/src/app/components/account/configuration/configuration.component.css
+++ b/Web/src/app/components/account/configuration/configuration.component.css
@@ -1,4 +1,8 @@
+.div-separation {
+    padding-bottom: 25px;
+    padding-top: 25px;
+}
+
 .btn-save {
     margin-bottom: 25px;
-    margin-top: 25px;
 }
