--- a/Web/src/app/components/asset/list-assets/list-assets.component.html
+++ b/Web/src/app/components/asset/list-assets/list-assets.component.html
@@ -2,6 +2,9 @@
   <div class="section-title">
     Top Assets
   </div>
+
+  <button mat-flat-button *ngIf="showNewAdviceButton" (click)="onNewAdviceClick()">New Recommendation</button>
+
   <div class="section-subtitle">
       Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor<br> 
       incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis<br> 
