--- a/Web/src/app/components/advisor/expert-details/expert-details.component.html
+++ b/Web/src/app/components/advisor/expert-details/expert-details.component.html
@@ -1,7 +1,9 @@
 <div class="global-container" *ngIf="expert">
   <div class="breadcrumbs">Home  >  Top Experts  >  <span>{{expert.name}}</span></div> 
   <div fxLayout="row" fxLayoutGap="30px">
-    <div fxLayout="column"> 
+    <div fxLayout="column">   
+      <button mat-flat-button *ngIf="showOwnerButton" (click)="onNewAdviceClick()">New Recommendation</button>   
+      <button mat-flat-button *ngIf="showOwnerButton" (click)="onEditProfileClick()">Edit Profile</button>     
       <advisor-card [advisor]="expert"></advisor-card>
       <recommendation-distribution [data]="expert.recommendationDistribution"></recommendation-distribution>
     </div>
