--- a/Web/src/app/components/advisor/top-experts/top-experts.component.html
+++ b/Web/src/app/components/advisor/top-experts/top-experts.component.html
@@ -2,6 +2,9 @@
   <div class="section-title">
     TOP EXPERTS
   </div>
+  
+  <button mat-flat-button *ngIf="showNewAdviceButton" (click)="onNewAdviceClick()">New Recommendation</button>
+
   <div class="section-filter" *ngIf="!hideFilters">
     <mat-form-field>
       <mat-select placeholder="Experts sorted by"
