top assets page - background

--- a/Web/src/app/components/asset/list-assets/list-assets.component.css
+++ b/Web/src/app/components/asset/list-assets/list-assets.component.css
@@ -1,3 +1,8 @@
+.top-assets-container{
+    background-color: #252525;
+    display: flex;
+}
+
 .filter-title {
     font-size: 11px;
     font-weight: 500;
