--- a/Web/src/app/components/advisor/expert-details/expert-details.component.css
+++ b/Web/src/app/components/advisor/expert-details/expert-details.component.css
@@ -1,52 +1,46 @@
-.breadcrumbs{
-    font-size: 12px;
-    font-weight: 300;
-    font-style: italic;
-    text-align: right;
-    color: #555555;
-    margin: 24px 0px;
-}
-
-.breadcrumbs span{
-    text-decoration: underline
+:host{
+    background: #252525;
+    padding-top: 20px;
+    display: block;
 }
 
 .expert-name{
-    font-size: 25px;
+    font-size: 27px;
     font-weight: 300;
     text-align: left;
-    color: #626262;
+    color: white;
 }
 
 .expert-description{
-    font-size: 11px;
+    font-size: 16px;
     font-weight: 300;
     text-align: left;
-    color: #555555;
+    color: white;
 }
 
 .expert-followers{
-    font-size: 8px;
-    font-weight: 600;
+    margin-top: 11px;
+    font-size: 16px;
+    font-weight: 300;
     text-align: left;
-    color: #5d5d5d;
+    color: #126efd;
 }
 
 .assets-table{
     width: 100%;
-    margin-top: 8px;
+    margin-top: 16px;
     text-align: center;
 }
 
 .assets-table .mat-cell{
-    font-size: 9px;
+    font-size: 12px;
     font-weight: 300;
-    color: #5d5d5d;
+    color: white;
 }
 
 .assets-table th{
-    background-color: #5d5d5d;
-    font-size: 9px;
+    background-color: #151515;
+    font-size: 12px;
     font-weight: 600;
     color: #ffffff;
 }
@@ -56,7 +50,7 @@
 }
 
 .mat-header-row{
-    height: 32px !important;
+    height: 40px !important;
 }
 
 .element-row {
@@ -68,18 +62,30 @@
 }
 
 .element-row:not(.expanded):hover {
-    background: #f5f5f5;
+    background: #15151540;
+}
+
+.element-row.expanded .mat-cell{
+    border-bottom-color: transparent;
 }
 
 .element-row.expanded {
     border-bottom-color: transparent;
 }
 
-/deep/ .collapsed .highcharts-container{
+:host ::ng-deep .collapsed .highcharts-container{
     display: none;
 }
 
-.expert-details-action-button{
+:host tr.mat-footer-row, tr.mat-row {
+    height: 74px;
+}
+
+:host .mat-table {
+    background: #252525;
+}
+
+/*.expert-details-action-button{
     width: 132px;
     height: 26px;
     line-height: 26px;
@@ -88,11 +94,11 @@
     font-weight: 500;
     text-align: center;
     color: #ffffff;
-}
+}*/
 
 .mat-column-assetName .table-asset-code{
-    font-size: 11px;
-    font-weight: 600;
+    font-size: 18px;
+    font-weight: 300;
 }
 
 .mat-column-position div{
@@ -100,8 +106,14 @@
     height: 16px;
     line-height: 16px;
     background-color: #63c96f;
-    font-size: 7px;
-    font-weight: 600;
+    font-size: 11px;
+    font-weight: 500;
     color: #ffffff;
     margin:auto;
+}
+
+.follow-button{
+    margin:unset;
+    height: 50px;
+    width: 168px;
 }
