--- a/Web/src/app/components/advisor/top-experts/top-experts.component.html
+++ b/Web/src/app/components/advisor/top-experts/top-experts.component.html
@@ -2,17 +2,16 @@
   <div class="section-title">
     TOP EXPERTS
   </div>
-  
-  <button mat-flat-button *ngIf="showAdvisorButton" (click)="onNewAdviceClick()">New Recommendation</button>
-  <button mat-flat-button *ngIf="showAdvisorButton" (click)="onEditProfileClick()">Edit Profile</button>   
-
-  <div class="section-filter" *ngIf="!hideFilters">
+  <div fxLayout="row" fxLayoutAlign="end center" fxLayoutGap="16px" class="section-filter" *ngIf="!hideFilters">
     <mat-form-field>
       <mat-select class="experts-sort" placeholder="Experts sorted by"
             (selectionChange)="onSortOptionChanged()" [(ngModel)]="selectedSortOption">
             <mat-option class="experts-sort-option" *ngFor="let sortOption of sortOptions" [value]="sortOption.value">{{sortOption.name}}</mat-option>
       </mat-select>
     </mat-form-field>
+    <div class="spacer"></div>
+    <div class="access-button action-button" *ngIf="showAdvisorButton" (click)="onNewAdviceClick()">NEW RECOMMENDATION</div>
+    <div class="access-button action-button" *ngIf="showAdvisorButton" (click)="onEditProfileClick()">EDIT PROFILE</div>
   </div>
   <div class="advisors-list" fxHide.lt-md>
     <advisor-card *ngFor="let expert of experts" class="advisor-card" [advisor]="expert" [advisorsLength]="experts.length"></advisor-card>
