--- a/Web/src/app/components/home/recommendation-box-list/recommendation-box-list.component.html
+++ b/Web/src/app/components/home/recommendation-box-list/recommendation-box-list.component.html
@@ -20,7 +20,7 @@
       </owl-carousel>
   </div>
   <div>
-    <div class="access-button" (click)="goToTopAssets()">
+    <div class="blue-button access-button" (click)="goToTopAssets()">
       SEE MORE
     </div>
   </div>
