--- a/Web/src/app/components/advisor/advisor-card/advisor-card.component.css
+++ b/Web/src/app/components/advisor/advisor-card/advisor-card.component.css
@@ -207,21 +207,11 @@
     text-decoration: underline;
 }
 
-.circle {
-    fill: none;
-    stroke-width: 2px;
-    animation: progress 1s ease-out forwards;
-}
-
-.circular-chart.black{
+.circular-chart{
     width: 90px;
 }
 
-.circular-chart.black .circle {
-    stroke: #333333;
-}
-
-.percentage {
+.circular-chart .percentage {
     fill: #333;
     font-size: 8px;
     text-anchor: middle;
