--- a/Web/src/app/components/home/recommendation-box/recommendation-box.component.html
+++ b/Web/src/app/components/home/recommendation-box/recommendation-box.component.html
@@ -10,7 +10,7 @@
         <ng-container matColumnDef="adviceType">
           <th mat-header-cell *matHeaderCellDef> Rating </th>
           <td mat-cell *matCellDef="let advice"> <div class="table-cell-title">{{adviceType}}</div> 
-            At price ${{advice.assetValueAtAdviceTime}} 
+            At price ${{advice.assetValueAtAdviceTime | currency}} 
           </td>
         </ng-container>
       
