top assets layout

--- a/Web/src/app/components/asset/list-assets/list-assets.component.html
+++ b/Web/src/app/components/asset/list-assets/list-assets.component.html
@@ -14,9 +14,9 @@
 
         <div fxLayout="column" fxLayoutAlign="center center">
             <asset-card *ngFor="let asset of assets" [asset]="asset"></asset-card>
-            <button mat-button *ngIf="hasMoreAssets()" (click)="loadMoreAssets()">
-                Load more
-            </button>
+            <div class="pagination-link" *ngIf="hasMoreAssets()" (click)="loadMoreAssets()">
+                LOAD MORE
+            </div>
         </div>
         <trending-assets></trending-assets>
     </div>
