--- a/Web/src/app/components/asset/list-assets/list-assets.component.css
+++ b/Web/src/app/components/asset/list-assets/list-assets.component.css
@@ -15,3 +15,14 @@
 .filter-form {
     margin-bottom: 22px;
 }
+
+.pagination-link{
+    font-size: 14.5px;
+    font-weight: 500;
+    line-height: 3.38;
+    letter-spacing: 0.9px;
+    text-align: center;
+    color: #07d1ff;
+    text-decoration: underline;
+    cursor: pointer;
+}
