--- a/Web/src/app/components/advisor/expert-details/expert-details.component.html
+++ b/Web/src/app/components/advisor/expert-details/expert-details.component.html
@@ -84,31 +84,36 @@
               </div>
             </td>
           </ng-container>
+          <ng-container matColumnDef="chevron">
+              <th mat-header-cell *matHeaderCellDef> </th>
+              <td mat-cell *matCellDef="let asset; let i = index;">
+                <fa-icon *ngIf="assets[i] == expandedElement" [icon]="'chevron-up'" size="lg" fxLayoutAlign="center stretch"></fa-icon>
+                <fa-icon *ngIf="assets[i] != expandedElement" [icon]="'chevron-down'" size="lg" fxLayoutAlign="center stretch"></fa-icon>
+              </td>
+            </ng-container>
 
           <ng-container matColumnDef="expandedDetail">
-            <td colspan=7 mat-cell *matCellDef="let asset"> 
-              <div>
-                <asset-history-chart [assetValues]="asset.element.values" [advices]="asset.element.assetAdvisor[0].advices"></asset-history-chart>
-                <div class="rates" fxLayout="row" fxLayoutAlign="space-around center">
-                  <div fxLayout="row" fxLayoutAlign="start center" fxLayoutGap="20px">
-                    <svg viewBox="0 0 36 36" class="circular-chart blue" fxFlex="80px">
-                      <path class="circle"
-                      [attr.stroke-dasharray]="asset.element.assetAdvisor[0].successRate * 100 +', 100'"
-                        d="M18 2.0845
-                          a 15.9155 15.9155 0 0 1 0 31.831
-                          a 15.9155 15.9155 0 0 1 0 -31.831"
-                      />
-                      <text x="18" y="20.35" class="percentage">{{asset.element.assetAdvisor[0].successRate * 100 | number:'1.0-0'}}%</text>
-                    </svg>
-                    <div class="success-rate-description" fxFlex>Success Rate</div>
+            <td colspan=8 mat-cell *matCellDef="let asset; let i = index;">
+              <asset-history-chart #assetHistoryChart [assetValues]="asset.element.values" [advices]="asset.element.assetAdvisor[0].advices" [chartTitle]="asset.element.name + ' price'"></asset-history-chart>
+              <div class="rates" fxLayout="row" fxLayoutAlign="space-around center">
+                <div fxLayout="row" fxLayoutAlign="start center" fxLayoutGap="20px">
+                  <svg viewBox="0 0 36 36" class="circular-chart blue" fxFlex="80px">
+                    <path class="circle"
+                    [attr.stroke-dasharray]="asset.element.assetAdvisor[0].successRate * 100 +', 100'"
+                      d="M18 2.0845
+                        a 15.9155 15.9155 0 0 1 0 31.831
+                        a 15.9155 15.9155 0 0 1 0 -31.831"
+                    />
+                    <text x="18" y="20.35" class="percentage">{{asset.element.assetAdvisor[0].successRate * 100 | number:'1.0-0'}}%</text>
+                  </svg>
+                  <div class="success-rate-description" fxFlex>Success Rate</div>
+                </div>
+                <div class="separator"></div>
+                <div fxLayout="row" fxLayoutAlign="start center"  fxLayoutGap="20px" >
+                  <div class="average-return" fxFlex="80px">
+                      {{asset.element.assetAdvisor[0].averageReturn * 100 | number:'1.1-1'}}%
                   </div>
-                  <div class="separator"></div>
-                  <div fxLayout="row" fxLayoutAlign="start center"  fxLayoutGap="20px" >
-                    <div class="average-return" fxFlex="80px">
-                        {{asset.element.assetAdvisor[0].averageReturn * 100 | number:'1.1-1'}}%
-                    </div>
-                    <div class="average-return-description" fxFlex>Average Return</div>
-                  </div>
+                  <div class="average-return-description" fxFlex>Average Return</div>
                 </div>
               </div>
             </td>
