--- a/Web/src/app/components/asset/list-assets/list-assets.component.html
+++ b/Web/src/app/components/asset/list-assets/list-assets.component.html
@@ -4,7 +4,7 @@
             Top Assets
         </div>
 
-        <button mat-flat-button *ngIf="showNewAdviceButton" (click)="onNewAdviceClick()">New Recommendation</button>
+        <div class="blue-button action-button" *ngIf="showNewAdviceButton" (click)="onNewAdviceClick()">NEW RECOMMENDATION</div>
 
         <div class="section-subtitle">
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor<br>
